<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000044"
>
	
    <Button android:id="@+id/btn_settings"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:text="@string/settings"
    />
    
    <Button android:id="@+id/btn_etickets"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:text="@string/etickets"
    />
    
    <Button android:id="@+id/btn_accountdetails"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:text="@string/accountdetails"
    />
    
    <Button android:id="@+id/btn_customerinformation"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:text="@string/customerinformation"
    />
    
    <Button android:id="@+id/btn_synchronize"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:text="@string/synchronize"
    />
    
    <Button android:id="@+id/btn_startbusscan"
        android:layout_width="fill_parent"
        android:layout_height="200px"
        android:text="@string/startbusscan"
        android:textSize="30px"
    />

</LinearLayout>